build: actions - linter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,5 +22,8 @@ jobs:
               with:
                   go-version-file: "go.mod"
 
+            - name: Install linter
+              uses: golangci/golangci-lint-action@v8
+
             - name: Build and test
               run: make all
